Añadida la lógica receptora, ahora se pueden recibir datos desde la app y la web

--- a/tab3/tab3.page.html
+++ b/tab3/tab3.page.html
@@ -7,4 +7,13 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-list>
+        <ion-card-content ion-item *ngFor="let dato of datos">
+            <p>Fecha epoch: {{dato.date}}</p>
+            <p>Posicion: {{dato.location}}</p>
+            <p>Medida: {{dato.measurement}}</p>
+           
+        </ion-card-content>
+    </ion-list>
+</ion-content>
