--- a/tab2/tab2.page.html
+++ b/tab2/tab2.page.html
@@ -1,11 +1,11 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>
-            BLE Scanner
+            ecoApp
         </ion-title>
         <ion-button (click)="discover()" slot="end">
             <ion-icon name="Bluetooth"></ion-icon>
-            <p>Scan</p>
+            <p>Send</p>
         </ion-button>
     </ion-toolbar>
 </ion-header>
